# lemonade-accounting

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/security/: audit-status.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: department-change.yml
.github/workflows/: ci.yml  codeql.yml  pr-agent-review.yml  qodo-merge.yml
docs/: BUILD_ORDER.md  CLOSER.md  CSV_EXPORT.md  EVENTS.md  index.md
docs/wiki/: README.md  agents.md  architecture.md  conventions.md  runbook.md
openspec/: project.md
openspec/changes/runtime-dependency-boundary/: proposal.md  tasks.md
openspec/specs/accounting/: spec.md
openspec/templates/: proposal.md  tasks.md
src/lemonade_accounting/: __init__.py  __main__.py  cli.py  closer.py  csv_export.py  ingest.py
tests/: test_cli.py  test_closer.py  test_csv_export.py  test_ingest.py
tests/fixtures/: one_day_cashier.jsonl  one_day_cashier_store_events.jsonl
